<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.petprotector.PetListActivity"
    android:padding="20dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="@color/dark_blue"/>

    <ImageView
        android:id="@+id/petImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/none"
        android:layout_gravity="center"
        android:clickable="true"
        android:onClick="selectPetImage"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/detailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/details"/>

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_number"/>

    <Button
        android:id="@+id/addPetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:layout_gravity="center"
        android:onClick="addPetButtonClick"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/petListView"/>

</LinearLayout>
